example_errors/0_gcc_after.txt
pres_code.cpp: In instantiation of ‘example::s::keep_in_bounds::process(TData&)::<?> [with auto:133 = entity_id; TData = ctx::system::data_proxy::multi<?>]’:
/home/vittorioromeo/OHWorkspace/ecst/include/./ecst/./context/./system/./instance/instance_subtask.inl:75:14:   required from ‘void ctx::system::instance<?>::for_entities(vrmc::sz_t, vrmc::sz_t, TF&&) [with TF = example::s::keep_in_bounds::process(TData&) [with TData = ctx::system::data_proxy::multi<?>]::<?>; TSettings = main()::hs; TSystemSignature = bh::type<?>::_; vrmc::sz_t = ulint]’
/home/vittorioromeo/OHWorkspace/ecst/include/./ecst/./context/./system/./instance/./proxy/data/./impl/multi.inl:39:73:   required from ‘auto ctx::system::data_proxy::multi<?>::for_entities(TF&&) [with TF = example::s::keep_in_bounds::process(TData&) [with TData = ctx::system::data_proxy::multi<?>]::<?>; TSystemSignature = bh::type<?>::_; TContext = ctx::_::data<?>; TInstance = ctx::system::instance<?>]’
pres_code.cpp:241:17:   required from ‘void example::s::keep_in_bounds::process(TData&) [with TData = ctx::system::data_proxy::multi<?>]’
pres_code.cpp:871:29:   required from ‘example::update_ctx(TContext&, TRenderTarget&, example::ft)::<?>::<?> [with auto:153 = example::s::keep_in_bounds; auto:154 = ctx::system::data_proxy::multi<?>; auto:150 = ctx::_::step::proxy<?>; TContext = ctx::_::data<?>; TRenderTarget = sf::RenderWindow]’
/home/vittorioromeo/OHWorkspace/ecst/include/./ecst/./system_execution_adapter/./impl/./predicate_holder/predicate_holder.inl:46:30:   required from ‘sea::_::predicate_holder<?>::for_subtasks(TF&&)::<?> mutable::<?> mutable [with auto:76 = ctx::system::data_proxy::multi<?>; auto:74 = example::s::keep_in_bounds; auto:75 = ctx::system::executor_proxy::data<?>; TF = example::update_ctx(TContext&, TRenderTarget&, example::ft)::<?> [with auto:150 = ctx::_::step::proxy<?>; TContext = ctx::_::data<?>; TRenderTarget = sf::RenderWindow]::<?>; TPredicate = sea::t(TSystemTags ...) [with TSystemTags = {tag_s::_::tag<?>, tag_s::_::tag<?>, tag_s::_::tag<?>, tag_s::_::tag<?>}]::<?>]’
/home/vittorioromeo/OHWorkspace/ecst/include/./ecst/./context/./system/./instance/instance.inl:155:14:   [ skipping 58 instantiation contexts, use -ftemplate-backtrace-limit=0 to disable ]
./utils/pres_game_app.hpp:208:23:   required from ‘void example::game_app<?>::init() [with TContext = ctx::_::data<?>]’
./utils/pres_game_app.hpp:216:17:   required from ‘example::game_app<?>::game_app(sf::RenderWindow&, TContext&) [with TContext = ctx::_::data<?>]’
./utils/.././boilerplate/app_runner.hpp:48:28:   required from ‘example::boilerplate::app_runner<?>::app_runner(const string&, sz_t, sz_t, Ts&& ...)::<?> [with Ts = {ctx::_::data<?>&}; T = example::game_app<?>]’
./utils/.././boilerplate/app_runner.hpp:36:59:   required from ‘struct example::boilerplate::app_runner<?>::app_runner(const string&, sz_t, sz_t, Ts&& ...) [with Ts = {ctx::_::data<?>&}; T = example::game_app<?>; __cxx11::string = __cxx11::basic_string<?>; sz_t = ulint]::<?>’
./utils/.././boilerplate/app_runner.hpp:36:25:   required from ‘example::boilerplate::app_runner<?>::app_runner(const string&, sz_t, sz_t, Ts&& ...) [with Ts = {ctx::_::data<?>&}; T = example::game_app<?>; __cxx11::string = __cxx11::basic_string<?>; sz_t = ulint]’
./utils/pres_game_app.hpp:224:49:   required from ‘void example::run_simulation(TContext&) [with TContext = ctx::_::data<?>]’
pres_code.cpp:936:24:   required from here
pres_code.cpp:274:31: error: ‘class sf::Vector2<?>’ has no member named ‘ya’; did you mean ‘y’?
                             v.ya *= -1;
                             ~~^~
